[gd_scene load_steps=3 format=3 uid="uid://diteh4ooiju6v"]

[ext_resource type="Script" path="res://Scripts/SidePanelNodes/ConditionNodePanel.gd" id="1_bs7q1"]

[sub_resource type="LabelSettings" id="LabelSettings_kddgl"]
font_color = Color(0.572549, 0.572549, 0.572549, 1)

[node name="ConditionContainer" type="VBoxContainer"]
offset_right = 280.0
offset_bottom = 98.0
theme_override_constants/separation = 10
script = ExtResource("1_bs7q1")

[node name="IfContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IfLabel" type="Label" parent="IfContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "If"

[node name="VariableDrop" type="OptionButton" parent="IfContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
allow_reselect = true

[node name="OperatorContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OperatorLabel" type="Label" parent="OperatorContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Operator"

[node name="OperatorDrop" type="OptionButton" parent="OperatorContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "=="
popup/item_0/id = 0
popup/item_1/text = ">="
popup/item_1/id = 1
popup/item_2/text = "<="
popup/item_2/id = 2
popup/item_3/text = "!="
popup/item_3/id = 3

[node name="ValueContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ValueLabel" type="Label" parent="ValueContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Value"

[node name="BooleanEdit" type="CheckButton" parent="ValueContainer"]
visible = false
layout_mode = 2

[node name="NumberEdit" type="SpinBox" parent="ValueContainer"]
visible = false
layout_mode = 2
update_on_text_changed = true

[node name="StringEdit" type="LineEdit" parent="ValueContainer"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "Value"
expand_to_text_length = true

[node name="DefaultLabel" type="Label" parent="ValueContainer"]
layout_mode = 2
text = "Please select a variable first"
label_settings = SubResource("LabelSettings_kddgl")

[connection signal="item_selected" from="IfContainer/VariableDrop" to="." method="_on_variable_selected"]
[connection signal="item_selected" from="OperatorContainer/OperatorDrop" to="." method="_on_operator_selected"]
[connection signal="toggled" from="ValueContainer/BooleanEdit" to="." method="_on_value_changed"]
[connection signal="focus_exited" from="ValueContainer/StringEdit" to="." method="_on_value_changed"]
[connection signal="text_submitted" from="ValueContainer/StringEdit" to="." method="_on_value_changed"]
